[gd_scene load_steps=31 format=3 uid="uid://noilc7phmu8k"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_n76ui"]
[ext_resource type="Material" path="res://player/bullet/bullet_material.tres" id="2_by25h"]
[ext_resource type="Script" path="res://player/gun/xr_gun.gd" id="2_uopoi"]
[ext_resource type="Texture2D" uid="uid://xlrypx7rbo1r" path="res://player/bullet/effect/FlarePolar.png" id="3_c86d8"]
[ext_resource type="ArrayMesh" uid="uid://dxkiv5j246cuf" path="res://player/model/muzzle_flash_particle_mesh_Cone.mesh" id="4_ppsd7"]
[ext_resource type="PackedScene" uid="uid://eukh535xfxjr" path="res://player/gun/blasterA.glb" id="8_3tv84"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="9_56rry"]
[ext_resource type="AudioStream" uid="uid://c52oq132qivqp" path="res://player/gun/shoot_sound_random.tres" id="10_jeplw"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="10_nvqj7"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="10_qxvac"]
[ext_resource type="Material" uid="uid://fjcadbqjoxhe" path="res://player/gun/highlight_material.tres" id="11_sdsgf"]
[ext_resource type="FontFile" uid="uid://ci166i544l4ql" path="res://player/gun/Turret_Road/TurretRoad-ExtraBold.ttf" id="12_15jpt"]
[ext_resource type="Texture2D" uid="uid://bvycpx6fiafo2" path="res://player/crosshair.png" id="12_pal5l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wlosy"]
size = Vector3(0.0764899, 0.178579, 0.34621)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kf00f"]
albedo_color = Color(0.690196, 0.690196, 0.690196, 1)
metallic = 0.13
metallic_specular = 0.76
roughness = 0.24
emission_enabled = true
emission = Color(0, 0.968627, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ln4s"]
albedo_color = Color(0.364706, 0.364706, 0.364706, 1)
metallic = 0.97
metallic_specular = 0.54
roughness = 0.55

[sub_resource type="TextMesh" id="TextMesh_q2juc"]
text = "enerGy Acceleration Tool"
font = ExtResource("12_15jpt")
font_size = 10
depth = 0.003

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_36h6c"]
particle_flag_align_y = true
direction = Vector3(0, 0, -1)
spread = 53.58
flatness = 0.08
gravity = Vector3(0, 3, 0)
initial_velocity_min = 0.5
initial_velocity_max = 0.5
turbulence_enabled = true
turbulence_noise_strength = 2.29

[sub_resource type="SphereMesh" id="SphereMesh_5gsk0"]
radius = 0.003
height = 0.02

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ofvtt"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_c86d8")

[sub_resource type="Gradient" id="Gradient_by3ln"]
offsets = PackedFloat32Array(0.325926, 1)
colors = PackedColorArray(0.0507812, 0.955505, 1, 1, 0.875, 0.888672, 1, 0.305882)

[sub_resource type="GradientTexture2D" id="5"]
gradient = SubResource("Gradient_by3ln")
width = 32

[sub_resource type="Curve" id="Curve_c2br2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.791139, 0.990909), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="7"]
width = 64
curve = SubResource("Curve_c2br2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t4jkl"]
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("7")
color_ramp = SubResource("5")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_263i5"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 0.168627)

[sub_resource type="SphereMesh" id="SphereMesh_lgcd6"]
material = SubResource("StandardMaterial3D_263i5")
radius = 0.02
height = 0.04

[sub_resource type="Animation" id="Animation_ph8re"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterA/OmniLight3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterA/AudioStreamPlayer3D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterA:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("XRToolsHighlightVisible:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xv7a5"]
resource_name = "shoot_recoil"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterA/OmniLight3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00871866, 0.148437),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterA/AudioStreamPlayer3D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterA:rotation:x")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.00096874, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 0.707, 2.2901),
"update": 0,
"values": [0.0, -0.5, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ol37"]
_data = {
"RESET": SubResource("Animation_ph8re"),
"shoot_recoil": SubResource("Animation_xv7a5")
}

[node name="GAT" instance=ExtResource("1_n76ui")]
rotation_order = 3
mass = 0.5
script = ExtResource("2_uopoi")
bullet_speed = 1.0
ranged_grab_method = 2
ranged_grab_speed = 10.0

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("BoxShape3D_wlosy")

[node name="blasterA" parent="." index="1" instance=ExtResource("8_3tv84")]
transform = Transform3D(-0.4, 0, -1.01407e-06, 0, 0.4, 0, 1.01407e-06, 0, -0.4, 0, 0, 0)

[node name="blasterA2" parent="blasterA" index="0"]
layers = 8
surface_material_override/0 = SubResource("StandardMaterial3D_kf00f")
surface_material_override/2 = SubResource("StandardMaterial3D_0ln4s")

[node name="Crosshair" type="Sprite3D" parent="blasterA" index="1"]
transform = Transform3D(-0.1625, -2.22045e-16, 1.04565e-07, 2.25514e-16, 0.1625, -7.45058e-09, -2.45368e-08, 9.31323e-10, -0.6925, -4.18466e-08, 0.222744, 0.277137)
modulate = Color(0, 0.803922, 1, 0.878431)
texture = ExtResource("12_pal5l")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="blasterA" index="2"]
transform = Transform3D(-2.5, 0, 3.77489e-07, 3.46945e-15, 2.5, 0, -3.77489e-07, 0, -2.5, 0, 0, 0)
stream = ExtResource("10_jeplw")
bus = &"SFX"

[node name="GunName" type="MeshInstance3D" parent="blasterA" index="3"]
transform = Transform3D(7.30152e-08, -0.265165, 0.265165, 0, 0.265165, 0.265165, -0.375, -5.02914e-08, 5.02914e-08, 0.0454012, 0.153381, 6.51926e-09)
layers = 8
mesh = SubResource("TextMesh_q2juc")
skeleton = NodePath("../..")

[node name="GunName2" type="MeshInstance3D" parent="blasterA" index="4"]
transform = Transform3D(-4.02316e-08, 0.265165, -0.265165, 0, 0.265165, 0.265165, 0.375, 2.79397e-08, -2.79397e-08, -0.045, 0.153381, -6.51926e-09)
layers = 8
mesh = SubResource("TextMesh_q2juc")
skeleton = NodePath("../..")

[node name="OmniLight3D" type="OmniLight3D" parent="blasterA" index="5"]
transform = Transform3D(-2.5, 0, 3.77489e-07, 3.46945e-15, 2.5, 0, -3.77489e-07, 0, -2.5, -8.8824e-08, 0.209372, 0.588255)
visible = false
light_color = Color(0.52549, 1, 1, 1)
light_energy = 7.135
shadow_enabled = true
omni_range = 6.023
omni_attenuation = 0.329877
omni_shadow_mode = 0

[node name="ShootFrom" type="Marker3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.49012e-08, 0.0484713, -0.174955)
gizmo_extents = 0.11

[node name="ShootParticle" type="GPUParticles3D" parent="ShootFrom" index="0"]
material_override = ExtResource("2_by25h")
cast_shadow = 0
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 0.79
process_material = SubResource("ParticleProcessMaterial_36h6c")
draw_pass_1 = SubResource("SphereMesh_5gsk0")

[node name="MuzzleFlash" type="GPUParticles3D" parent="ShootFrom" index="1"]
transform = Transform3D(1, 2.98023e-08, -1.3027e-15, 0, -4.37114e-08, -1, -2.98023e-08, 1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ofvtt")
cast_shadow = 0
emitting = false
amount = 1
lifetime = 0.1
one_shot = true
explosiveness = 1.0
collision_base_size = 0.0
process_material = SubResource("ParticleProcessMaterial_t4jkl")
draw_pass_1 = ExtResource("4_ppsd7")

[node name="GrabPointHandLeft" parent="." index="3" instance=ExtResource("9_56rry")]
transform = Transform3D(1, 0, 0, 0, 0.997801, -0.0662739, 0, 0.0662739, 0.997801, -0.008, -0.005, -0.028)

[node name="GrabPointHandRight" parent="." index="4" instance=ExtResource("10_nvqj7")]
transform = Transform3D(1, 0, 0, 0, 0.997831, -0.0658211, 0, 0.0658211, 0.997831, -0.00342127, -0.00526484, -0.0280473)
visible = true

[node name="FireCooldown" type="Timer" parent="." index="5"]
process_callback = 0
wait_time = 0.2
one_shot = true
autostart = true

[node name="Shoot" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource("10_jeplw")
bus = &"SFX"

[node name="RayCast3D" type="RayCast3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0499368, 0)
target_position = Vector3(0, 0, -100)
collision_mask = 3

[node name="Laser" type="MeshInstance3D" parent="RayCast3D" index="0"]
mesh = SubResource("SphereMesh_lgcd6")

[node name="XRToolsHighlightVisible" type="Node3D" parent="." index="8"]
script = ExtResource("10_qxvac")

[node name="blasterA" parent="XRToolsHighlightVisible" index="0" instance=ExtResource("8_3tv84")]
transform = Transform3D(-0.4, 0, -6.03983e-08, 0, 0.4, 0, 6.03983e-08, 0, -0.4, 0, 0, 0)

[node name="blasterA2" parent="XRToolsHighlightVisible/blasterA" index="0"]
layers = 8
surface_material_override/0 = ExtResource("11_sdsgf")
surface_material_override/1 = ExtResource("11_sdsgf")
surface_material_override/2 = ExtResource("11_sdsgf")
surface_material_override/3 = ExtResource("11_sdsgf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]
libraries = {
"": SubResource("AnimationLibrary_2ol37")
}

[connection signal="action_pressed" from="." to="." method="_on_action_pressed"]

[editable path="blasterA"]
[editable path="XRToolsHighlightVisible/blasterA"]
